# public-automatic-generation-correction-errortagging-v2

./: .gitignore  README.md  RESEARCH-DESCRIPTION.md  generate_repro_dirs.py  pyproject.toml
configs/: expected_outputs.yaml
configs/analysis/: default.yaml
configs/annotation/: default.yaml
configs/data_loader/: default.yaml
configs/dummies/: 2-sample-celva-base-gpt2-large.yaml  2-sample-celva-base-gpt2-medium.yaml  2-sample-celva-base-gpt2-small.yaml  2-sample-celva-base-pythia-1.4b.yaml  2-sample-celva-base-pythia-160m.yaml  2-sample-celva-base-pythia-1b.yaml  2-sample-celva-base-pythia-410m.yaml  2-sample-celva-base-pythia-70m.yaml  2-sample-celva-base-smollm2-1.7b.yaml  2-sample-celva-base-smollm2-135m.yaml  2-sample-celva-base-smollm2-360m.yaml  (+13 more)
data/: dummy_input.txt
deploy/: README.md  project-setup-remote.sh  run-all-split-sentences.sh  run-celva-all-models.sh  run-smoke-test.sh  run_all_models_remote.sh  run_large_models_remote.sh  setup_and_run.sh  tmux-run-remote.md  vastai-pipeline-deploy-tmux.md
docs/: commands.md  experiment-plan.md  pipeline-order.md
eval_scripts/: README.md  _io.py  eval_errant_category_table.py  eval_error_rate_table.py  eval_perplexity_table.py  predict_online.py  raw_to_jsonl.py  run_all_tables.py
notebooks/: colab_run_all_models_celva_sp.ipynb  colab_run_all_models_kupa_keys.ipynb  colab_run_pipeline.ipynb  quickstart.ipynb
reproducibility/: VASTAI-REPRODUCIBILITY-INSTRUCTIONS.md
runs/: README.md
scripts/: compare_texts.py  run_2_sample_celva_pythia_410m.sh  run_full_celva_all_models.sh  run_pipeline.sh
(+301 files in other folders)
